--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,12 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework:spring-core:6.1.3'
+    implementation "org.springframework:spring-context:6.0.8"
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
-    useJUnitPlatform()
-}
+ }
