--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-core:6.1.3'
+    implementation "org.springframework:spring-core:6.1.3"
     implementation "org.springframework:spring-context:6.0.8"
+    implementation "jakarta.annotation:jakarta.annotation-api:1.3.5"
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
