--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation "org.springframework:spring-core:6.1.3"
     implementation "org.springframework:spring-context:6.0.8"
     implementation "jakarta.annotation:jakarta.annotation-api:1.3.5"
+    implementation 'org.postgresql:postgresql:42.7.2'
     implementation "javax.inject:javax.inject:1"
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
