--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.2.0'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
 group = 'org.example'
@@ -10,11 +12,8 @@ repositories {
 }
 
 dependencies {
-    implementation "org.springframework:spring-core:6.1.3"
-    implementation "org.springframework:spring-context:6.0.8"
-    implementation "jakarta.annotation:jakarta.annotation-api:1.3.5"
-    implementation 'org.postgresql:postgresql:42.7.2'
-    implementation "javax.inject:javax.inject:1"
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.postgresql:postgresql'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
