--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.postgresql:postgresql'
 
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
- }
+    //работаем с JUnit 5
+    useJUnitPlatform()
+}
