--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,9 +19,16 @@ db:
     - size: 3
       timeout: 3
 
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5433/postgres
+    username: postgres
+    password: pass
+    driver-class-name: org.postgresql.Driver
+
 logging:
   level:
-    root: WARN
+    root: INFO
     com.dmdev.spring.database.pool.ConnectionPool: INFO
 #    включили запись в файл
   file:
