--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,20 @@
 plugins {
+    id 'org.springframework.boot' version '2.6.2'
+    id "io.spring.dependency-management" version '1.0.11.RELEASE'
+    id "io.freefair.lombok" version "6.3.0"
+    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
     id 'java'
-    id 'org.springframework.boot' version '3.2.0'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'io.freefair.lombok' version '6.3.0'
 }
 
-group = 'org.example'
-version = '1.0-SNAPSHOT'
+group 'org.example'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+
+configurations {
+    querydsl.extendsFrom annotationProcessor, implementation, compilyOnly, runtimeOnly
 }
 
 dependencies {
@@ -17,11 +22,28 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.postgresql:postgresql'
     implementation 'org.springframework.data:spring-data-envers'
+    implementation 'com.querydsl:querydsl-jpa'
+
+    annotationProcessor 'com.querydsl:querydsl-apt'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+querydsl {
+    jpa = true
+    library = 'com.querydsl:querydsl-apt:5.0.0'
+    querydslSourcesDir = "$buildDir/generated/sources/annotationProcessor/java/main"
+}
+
+compileQuerydsl {
+    options.annotationProcessorPath = configurations.querydsl
 }
 
 test {
     //работаем с JUnit 5
     useJUnitPlatform()
+}
+
+wrapper {
+    gradleVersion '7.3'
 }
