add web starter, jsp files and controller

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,6 +20,11 @@ db:
       timeout: 3
 
 spring:
+  mvc:
+    view:
+      prefix: /WEB-INF/jsp
+      suffix: .jsp
+
   datasource:
     url: jdbc:postgresql://localhost:5433/postgres
     username: postgres
