--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,6 +19,10 @@ db:
     - size: 3
       timeout: 3
 
+springdoc:
+  swagger-ui:
+    path: /
+
 spring:
   mvc:
 #    1 способ - задаем формат дат при отправке запросов
