--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    implementation 'org.springframework.security:spring-security-oauth2-client'
+    implementation 'org.springframework.security:spring-security-oauth2-jose'
     implementation "org.springdoc:springdoc-openapi-ui:${versions.springdoc}"
     implementation 'org.springframework.data:spring-data-envers'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
