--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,11 +23,11 @@ springdoc:
   swagger-ui:
     path: /
 #    подключение oauth2 к swagger
-    oauth2:
+#    oauth2:
 #      clientId:
 #      clientSecret:
-      scope: openid, email, profile
-    oauth2-redirect-url: http://localhost:8080/swagger-ui/oauth2-redirect.html
+#      scope: openid, email, profile
+#    oauth2-redirect-url: http://localhost:8080/swagger-ui/oauth2-redirect.html
 
 spring:
   mvc:
@@ -39,14 +39,17 @@ spring:
       suffix: .jsp
   security:
 #    подключение oauth2
-    oauth2:
-      client:
-        registration:
-          google:
+#    oauth2:
+#      client:
+#        registration:
+#          google:
 #            clientId:
 #            clientSecret:
-            redirectUri: http://localhost:8080/login/oauth2/code/google
-            scope: openid, email, profile
+#            redirectUri: http://localhost:8080/login/oauth2/code/google
+#            scope: openid, email, profile
+  messages:
+    basename: messages
+
   datasource:
     url: jdbc:postgresql://localhost:5433/postgres
     username: postgres
