--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,6 +19,10 @@ db:
     - size: 3
       timeout: 3
 
+app.common.logging:
+  enabled: true
+  level: INFO
+
 springdoc:
   swagger-ui:
     path: /
